fix(table): opening a selector should not make a scrollbar appear

--- a/src/xo-app/page/index.css
+++ b/src/xo-app/page/index.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 100vh;
+  height: 100%;
 }
 
 .header {
